Fix mobile spacing in section why verify

--- a/app/assets/stylesheets/components/section.scss
+++ b/app/assets/stylesheets/components/section.scss
@@ -14,11 +14,6 @@ section hr {
   opacity: 1;
 }
 
-section .content {
-  position: relative;
-  left: 5%;
-}
-
 section p {
   font-family: Roboto;
   font-size: 16px;
